GNOME Bugzilla – Bug 656065
empathy crashed with SIGSEGV in __strcmp_ssse3() (Press F3 -> Windows for search text)
Last modified: 2011-08-18 15:25:35 UTC
Open bug in launchpad.net: https://bugs.launchpad.net/bugs/821762 " 1) Open empathy 2) Press F3 -> Open Windows for search text -> main of empathy freezy 3) Crash empathy "
+ Trace 228034
Created attachment 193409 [details] [review] LogWindow: don't crash if there are logs from the future
This can happen if there are logs from the future, see format_date_for_display() if (days_elapsed < 0) { text = NULL; }
Review of attachment 193409 [details] [review]: ++
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.
I open this report. Bug in empathy 3.1.6 https://bugs.launchpad.net/bugs/828802
(In reply to comment #5) > I open this report. Bug in empathy 3.1.6 > > https://bugs.launchpad.net/bugs/828802 Is not the same.