LogWindow: don't crash if there are logs from the future

https://bugzilla.gnome.org/show_bug.cgi?id=656065